Changelog 1.0.0-1.21:

- Ported to a 1.21 version

Changelog 1.0.1-1.21:

- Added Redstone Shield with Particle System
- Added tooltip that shows if particles are enabled or disabled
- Fixed Mod Descriptions and Links

Changelog 1.0.2-1.21:

- Fixed Enchanting Feature for Anvils in Survival